[gd_scene load_steps=2 format=3 uid="uid://d0dgoiah7xy53"]

[ext_resource type="Script" path="res://menus/TitleScreen.gd" id="1_t3gw7"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3gw7")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 28.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 74.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
